test/valid/validNatural/TestSub.plume

/**
 * 
 * Classe que testa uma subtraccao
 *
 * @author 37029, Juliana Franco
 *
 */
class TestSub extends Object is

  method main : () -> String is
    new Successor(new Successor(new Successor(new Zero()))).sub(
    new Successor(new Zero())).toString()
    
    // 3 - 1 = 2
    
  

